Close menu on router change + fixed chat open on mobile

--- a/shared/assets/styles/mobile/_chat.scss
+++ b/shared/assets/styles/mobile/_chat.scss
@@ -7,11 +7,13 @@
     z-index: 2000;
     transition: 1s ease top;
     &-hidden {
-      top: calc(100% - 6rem);
+      top: calc(100% - 5.7rem);
     }
     &__header {
+      h2,
       .select {
         min-width: 50%;
+        flex-basis: 50%;
       }
     }
     &__fixed {
@@ -24,5 +26,11 @@
         height: calc(100vh - 19rem) !important;
       }
     }
+  }
+}
+
+@media (max-width: $smallMobile) {
+  .chat {
+    width: 100%;
   }
 }
