--- a/shared/assets/styles/mobile/_header.scss
+++ b/shared/assets/styles/mobile/_header.scss
@@ -54,7 +54,7 @@
           width: 100%;
           height: 40px;
           line-height: 40px;
-          margin: 10px 0;
+          margin: 10px auto;
           text-transform: uppercase;
         }
       }
@@ -71,7 +71,7 @@
         }
       }
       .button {
-        min-width: 40px;
+        width: 40px;
         font-size: 0;
         display: block;
         text-align: center;
